--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
     "require": {
         "php": "^7.0",
         "jan-swiecki/simple-annotations": "*"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.5"
     }
 }
